# src/branch-manager/dto/manager-search.dto.ts
@@ -1,0 +1,5 @@
+import { SearchRequestDto } from "src/common/dto/SearchRequestDto";
+
+export class ManagerSearchDto extends SearchRequestDto {
+    //
+}
